--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
   </head>
+
 
   <body>
     <header class="jumbotron">
@@ -28,11 +30,61 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
+
+
+    <main class="container d-flex flex-column">
       <!-- Timeblocks go here -->
-    </div>
+      <div class="row">
+        <h5 class="col-1">9AM</h5>
+        <div class="col-10"></div>
+        <span class="oi oi-lock-locked"></span>
+      </div>
+      <div class="row">
+        <h5 class="col-1">10AM</h5>
+        <div class="col-10"></div>
+        <span class="oi oi-lock-locked"></span>
+      </div>
+      <div class="row">
+        <h5 class="col-1">11AM</h5>
+        <div class="col-10"></div>
+        <span class="oi oi-lock-locked"></span>
+      </div>
+      <div class="row">
+          <h5 class="col-1">12PM</h5>
+          <div class="col-10"></div>
+          <span class="oi oi-lock-locked"></span>
+      </div>
+      <div class="row">
+          <h5 class="col-1">1PM</h5>
+          <div class="col-10"></div>
+          <span class="oi oi-lock-locked"></span>
+      </div>
+      <div class="row">
+          <h5 class="col-1">2PM</h5>
+          <div class="col-10"></div>
+          <span class="oi oi-lock-locked"></span>
+      </div>
+      <div class="row">
+          <h5 class="col-1">3PM</h5>
+          <div class="col-10"></div>
+          <span class="oi oi-lock-locked"></span>
+      </div>
+      <div class="row">
+          <h5 class="col-1">4PM</h5>
+          <div class="col-10"></div>
+          <span class="oi oi-lock-locked"></span>
+      </div>
+      <div class="row">
+          <h5 class="col-1">5PM</h5>
+          <div class="col-10"></div>
+          <span class="oi oi-lock-locked"></span>
+      </div>
+    </main>
+
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
