add date, css hour and savebutton

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -35,49 +35,49 @@
     <main class="container d-flex flex-column">
       <!-- Timeblocks go here -->
       <div class="row">
-        <h5 class="col-1">9AM</h5>
-        <div class="col-10"></div>
-        <span class="oi oi-lock-locked"></span>
+        <h5 class="col-1 hour">9AM</h5>
+        <div class="col textarea"></div>
+        <span class="saveBtn oi oi-lock-locked col-1"></span>
       </div>
       <div class="row">
-        <h5 class="col-1">10AM</h5>
-        <div class="col-10"></div>
-        <span class="oi oi-lock-locked"></span>
+        <h5 class="col-1 hour">10AM</h5>
+        <div class="col textarea"></div>
+        <span class="saveBtn oi oi-lock-locked col-1"></span>
       </div>
       <div class="row">
-        <h5 class="col-1">11AM</h5>
-        <div class="col-10"></div>
-        <span class="oi oi-lock-locked"></span>
+        <h5 class="col-1 hour">11AM</h5>
+        <div class="col textarea"></div>
+        <span class="saveBtn oi oi-lock-locked col-1"></span>
       </div>
       <div class="row">
-          <h5 class="col-1">12PM</h5>
-          <div class="col-10"></div>
-          <span class="oi oi-lock-locked"></span>
+          <h5 class="col-1 hour">12PM</h5>
+          <div class="col textarea"></div>
+          <span class="saveBtn oi oi-lock-locked col-1"></span>
       </div>
       <div class="row">
-          <h5 class="col-1">1PM</h5>
-          <div class="col-10"></div>
-          <span class="oi oi-lock-locked"></span>
+          <h5 class="col-1 hour">1PM</h5>
+          <div class="col textarea"></div>
+          <span class="saveBtn oi oi-lock-locked col-1"></span>
       </div>
       <div class="row">
-          <h5 class="col-1">2PM</h5>
-          <div class="col-10"></div>
-          <span class="oi oi-lock-locked"></span>
+          <h5 class="col-1 hour">2PM</h5>
+          <div class="col textarea"></div>
+          <span class="saveBtn oi oi-lock-locked col-1"></span>
       </div>
       <div class="row">
-          <h5 class="col-1">3PM</h5>
-          <div class="col-10"></div>
-          <span class="oi oi-lock-locked"></span>
+          <h5 class="col-1 hour">3PM</h5>
+          <div class="col textarea"></div>
+          <span class="saveBtn oi oi-lock-locked col-1"></span>
       </div>
       <div class="row">
-          <h5 class="col-1">4PM</h5>
-          <div class="col-10"></div>
-          <span class="oi oi-lock-locked"></span>
+          <h5 class="col-1 hour">4PM</h5>
+          <div class="col textarea"></div>
+          <span class="saveBtn oi oi-lock-locked col-1"></span>
       </div>
       <div class="row">
-          <h5 class="col-1">5PM</h5>
-          <div class="col-10"></div>
-          <span class="oi oi-lock-locked"></span>
+          <h5 class="col-1 hour">5PM</h5>
+          <div class="col textarea"></div>
+          <span class="saveBtn oi oi-lock-locked col-1"></span>
       </div>
     </main>
 
