update readme and textarea html

--- a/index.html
+++ b/index.html
@@ -36,47 +36,47 @@
       <!-- Timeblocks go here -->
       <div class="row">
         <h5 class="col-1 hour">9AM</h5>
-        <div class="col textarea"></div>
+        <textarea class="col textarea"></textarea>
         <span class="saveBtn oi oi-lock-locked col-1"></span>
       </div>
       <div class="row">
         <h5 class="col-1 hour">10AM</h5>
-        <div class="col textarea"></div>
+        <textarea class="col textarea"></textarea>
         <span class="saveBtn oi oi-lock-locked col-1"></span>
       </div>
       <div class="row">
         <h5 class="col-1 hour">11AM</h5>
-        <div class="col textarea"></div>
+        <textarea class="col textarea"></textarea>
         <span class="saveBtn oi oi-lock-locked col-1"></span>
       </div>
       <div class="row">
           <h5 class="col-1 hour">12PM</h5>
-          <div class="col textarea"></div>
+          <textarea class="col textarea"></textarea>
           <span class="saveBtn oi oi-lock-locked col-1"></span>
       </div>
       <div class="row">
           <h5 class="col-1 hour">1PM</h5>
-          <div class="col textarea"></div>
+          <textarea class="col textarea"></textarea>
           <span class="saveBtn oi oi-lock-locked col-1"></span>
       </div>
       <div class="row">
           <h5 class="col-1 hour">2PM</h5>
-          <div class="col textarea"></div>
+          <textarea class="col textarea"></textarea>
           <span class="saveBtn oi oi-lock-locked col-1"></span>
       </div>
       <div class="row">
           <h5 class="col-1 hour">3PM</h5>
-          <div class="col textarea"></div>
+          <textarea class="col textarea"></textarea>
           <span class="saveBtn oi oi-lock-locked col-1"></span>
       </div>
       <div class="row">
           <h5 class="col-1 hour">4PM</h5>
-          <div class="col textarea"></div>
+          <textarea class="col textarea"></textarea>
           <span class="saveBtn oi oi-lock-locked col-1"></span>
       </div>
       <div class="row">
           <h5 class="col-1 hour">5PM</h5>
-          <div class="col textarea"></div>
+          <textarea class="col textarea"></textarea>
           <span class="saveBtn oi oi-lock-locked col-1"></span>
       </div>
     </main>
