add save button event listener

--- a/index.html
+++ b/index.html
@@ -34,50 +34,50 @@
 
     <main class="container d-flex flex-column">
       <!-- Timeblocks go here -->
-      <div class="row">
+      <div id="9-hour" class="row">
         <h5 class="col-1 hour">9AM</h5>
         <textarea class="col textarea"></textarea>
-        <span class="saveBtn oi oi-lock-locked col-1"></span>
+        <button class="saveBtn oi oi-lock-locked col-1"></button>
       </div>
-      <div class="row">
+      <div id="10-hour" class="row">
         <h5 class="col-1 hour">10AM</h5>
         <textarea class="col textarea"></textarea>
-        <span class="saveBtn oi oi-lock-locked col-1"></span>
+        <button class="saveBtn oi oi-lock-locked col-1"></button>
       </div>
-      <div class="row">
+      <div id="11-hour" class="row">
         <h5 class="col-1 hour">11AM</h5>
         <textarea class="col textarea"></textarea>
-        <span class="saveBtn oi oi-lock-locked col-1"></span>
+        <button class="saveBtn oi oi-lock-locked col-1"></button>
       </div>
-      <div class="row">
+      <div id="12-hour" class="row">
           <h5 class="col-1 hour">12PM</h5>
           <textarea class="col textarea"></textarea>
-          <span class="saveBtn oi oi-lock-locked col-1"></span>
+          <button class="saveBtn oi oi-lock-locked col-1"></button>
       </div>
-      <div class="row">
+      <div id="1-hour" class="row">
           <h5 class="col-1 hour">1PM</h5>
           <textarea class="col textarea"></textarea>
-          <span class="saveBtn oi oi-lock-locked col-1"></span>
+          <button class="saveBtn oi oi-lock-locked col-1"></button>
       </div>
-      <div class="row">
+      <div id="2-hour" class="row">
           <h5 class="col-1 hour">2PM</h5>
           <textarea class="col textarea"></textarea>
-          <span class="saveBtn oi oi-lock-locked col-1"></span>
+          <button class="saveBtn oi oi-lock-locked col-1"></button>
       </div>
-      <div class="row">
+      <div id="3-hour" class="row">
           <h5 class="col-1 hour">3PM</h5>
           <textarea class="col textarea"></textarea>
-          <span class="saveBtn oi oi-lock-locked col-1"></span>
+          <button class="saveBtn oi oi-lock-locked col-1"></button>
       </div>
-      <div class="row">
+      <div id="4-hour" class="row">
           <h5 class="col-1 hour">4PM</h5>
           <textarea class="col textarea"></textarea>
-          <span class="saveBtn oi oi-lock-locked col-1"></span>
+          <button class="saveBtn oi oi-lock-locked col-1"></button>
       </div>
-      <div class="row">
+      <div id="5-hour" class="row">
           <h5 class="col-1 hour">5PM</h5>
           <textarea class="col textarea"></textarea>
-          <span class="saveBtn oi oi-lock-locked col-1"></span>
+          <button class="saveBtn oi oi-lock-locked col-1"></button>
       </div>
     </main>
 
