change css order to display messgae

--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
     <title>Work Day Scheduler</title>
   </head>
 
-  <section class='text-center alert' id="alert">Appointment Added to localStorage</section>
-
   <body>
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
@@ -32,6 +30,7 @@
       <p id="currentDay" class="lead"></p>
     </header>
 
+    <section class='text-center alert' id="notify">Appointment Added to localStorage</section>
 
     <main class="container d-flex flex-column">
       <!-- Timeblocks go here -->
